src/tests/snapshots/niri__tests__window_opening__check_target_size@dhP0.5-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    default-window-height { proportion 0.5; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 800 × 600, states: []

post-map configures:
size: 0 × 0, bounds: 800 × 600, states: []
size: 1264 × 704, bounds: 1264 × 704, states: [Activated]
